third_party/move/move-compiler-v2/tests/checking/inlining/break_continue_in_lambda.exp

Diagnostics:
error: Break outside of a loop not supported in function-typed arguments (lambda expressions)
  ┌─ tests/checking/inlining/break_continue_in_lambda.move:7:17
  │
7 │                 break;
  │                 ^^^^^

error: Break outside of a loop not currently supported in inline functions
   ┌─ tests/checking/inlining/break_continue_in_lambda.move:14:9
   │
14 │         break;
   │         ^^^^^

error: Break outside of a loop not supported in function-typed arguments (lambda expressions)
   ┌─ tests/checking/inlining/break_continue_in_lambda.move:51:26
   │
51 │                 brk2(| | break);
   │                          ^^^^^
